--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>My Fist Webpage</title>
-    <link=href"https://Lucas044.github.io" 
+    <link=href"https://Lucas044.github.io/css/main.css" 
   </head>
   <body>
     <h1> <b>My First Webpage</b> </h1>
