--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>My Fist Webpage</title>
     <link href="Lucas004.github.io/css/main.css"> 
   </head>
-  <body bgcolor="red;">
+  <body>
     <h1> <b>My First Webpage</b> </h1>
     <h3> <p> This is my first webpage, in which I have tried to program in HTML lenguage, which is the programing lenguage that I am learning. </p>
       <h3> This is the page which is teaching me how to progam in HTML lenguage </h3>
