--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
        <li style="Color: Red;">HTML Colors</li>
           </ul>
           <h1>Thank You For reading my first webpage!</h1>
-          <iframe scr="https://youtube.com"><iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/AxxNRJeZCIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
