--- a/test/index.html
+++ b/test/index.html
@@ -3,11 +3,12 @@
 <head></head>
 
 <body>
-<script src="myScripts.js"> </script>
-
-
-
-
+  <h1>Where to start?</h1>
+      <input type="text" id="start">
+    
+   <h1>Where to end? </h1>
+    <input type="text" id="end">
+    <button onclick="myloop()"> Start the loop </button>
 
 </body>
 </html>
