--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+  <script src="myScripts.ja">  </script>
+  </head>
 
 <body>
   <h1>Where to start?</h1>
