--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="myScripts.ja">  </script>
+  <script src="myScripts.js">  </script>
   </head>
 
 <body>
