--- a/test/index.html
+++ b/test/index.html
@@ -5,12 +5,14 @@
   </head>
 
 <body>
-  <h1>Where to start?</h1>
-      <input type="text" id="start">
-    
-   <h1>Where to end? </h1>
-    <input type="text" id="end">
-    <button onclick="myloop()"> Start the loop </button>
+<h3> Where to start? </h3>
+  <input type="text" id="start">
+<h3> Where to end? </h3>
+  <input type="text" id="end">
+  <h3> How much to jump? </h3>
+  <input type="text" id="jump">
+  <button onclick="myFunction()"> Loop </button>
+  
 
 </body>
 </html>
